Add entity according to Erd_01

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=AllLoginRegister
+spring.application.name=MarinePath_BE
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/AccountManagement
+spring.datasource.url=jdbc:postgresql://localhost:5432/MarinePath
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
