Basic part completed and determined to pass SWD392.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=MarinePath_BE
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/AccountManagement
+spring.datasource.url=jdbc:postgresql://localhost:5432/MarinePath
 spring.datasource.username=${POSTGRE_USERNAME}
 spring.datasource.password=${POSTGRE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
